# fiap-pos-tech

./: .gitignore  .gitpod.yml  README.md  requirements.txt  tech-challenge.ipynb
05-hacka/: KAGGLE_DATASET_DESCRIPTION.md  KAGGLE_MODEL_DESCRIPTION.md  README.md  augment_data.py  augment_dataset.py  build_final_csv.py  dataset_augment.py  dataset_output_image.csv  generate_dataset.py  generate_dataset_base.py  generate_dataset_output.py  main.py  pyproject.toml  train.ipynb  train.py
05-hacka/dataset_augment/: 0c7256e6-AZ_aug_11.xml  0c7256e6-AZ_aug_13.xml  0c7256e6-AZ_aug_15.xml  0c7256e6-AZ_aug_16.xml  0c7256e6-AZ_aug_17.xml  0c7256e6-AZ_aug_23.xml  0c7256e6-AZ_aug_3.xml  0c7256e6-AZ_aug_31.xml  0c7256e6-AZ_aug_32.xml  0c7256e6-AZ_aug_33.xml  0c7256e6-AZ_aug_34.xml  0c7256e6-AZ_aug_36.xml  0c7256e6-AZ_aug_45.xml  0c7256e6-AZ_aug_5.xml  0c7256e6-AZ_aug_50.xml  0c7256e6-AZ_aug_56.xml  0c7256e6-AZ_aug_60.xml  0c7256e6-AZ_aug_68.xml  0c7256e6-AZ_aug_7.xml  0c7256e6-AZ_aug_72.xml  0c7256e6-AZ_aug_73.xml  0c7256e6-AZ_aug_75.xml  0c7256e6-AZ_aug_79.xml  0c7256e6-AZ_aug_82.xml  0c7256e6-AZ_aug_87.xml  0c7256e6-AZ_aug_89.xml  0c7256e6-AZ_aug_9.xml  0c7256e6-AZ_aug_91.xml  0c7256e6-AZ_aug_96.xml  0c7256e6-AZ_aug_97.xml  0c7256e6-AZ_aug_98.xml  f2765bc5-AWS_aug_14.xml  f2765bc5-AWS_aug_15.xml  f2765bc5-AWS_aug_18.xml  f2765bc5-AWS_aug_21.xml  f2765bc5-AWS_aug_22.xml  f2765bc5-AWS_aug_23.xml  f2765bc5-AWS_aug_25.xml  f2765bc5-AWS_aug_26.xml  f2765bc5-AWS_aug_28.xml  (+33 more)
05-hacka/dataset_augment/dataset_base/: 0c7256e6-AZ.xml  f2765bc5-AWS.xml  labeling.xml
05-hacka/dataset_base/: image_relevance_analyser.py  mapping_images_with_relevance.csv  relevance_levels_count.csv
05-hacka/scripts/: compare_folders.sh  merge_csvs.sh  rename_png_files.sh  rename_png_with_prefix.sh  resize_png_for_pytorch.sh  split_csv.sh
05-hacka/src/: main.py
05-hacka/src/dataset/: augment_dataset.py  classes.json  generate_dataset_output.py
05-hacka/src/finetunning/: predict.py  train.py  util.py
05-hacka/src/generative_ai/: chatgpt.py
05-hacka/src/stride_report/: main.py
05-hacka/src/train/: predict.py  train.ipynb  util.py
tech-challenge-03/: README.md  pyproject.toml
tech-challenge-03/finetuning/: const.py  load_dataset.py  transform_dataset.py
tech-challenge-03/finetuning/files/: clean_dataset.json  fine_tuning.jsonl
tech-challenge-03/finetuning/mistral/: fine_tuning.ipynb
tech-challenge-03/finetuning/openai/: fine_tuning.ipynb
tech-challenge-04/: .gitignore  README.md  main.py  pyproject.toml
tech-challenge-04/video_analysis/: activity_detector.py  audio_summarization.py  face_detector.py  logger.py  util.py  video.py
(+1025 files in other folders)
