[project]
name = "tech-challenge-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.5.2",
    "coloredlogs>=15.0.1",
    "datasets>=3.4.1",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.29.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "openai>=1.68.2",
    "pandas>=2.2.3",
    "peft>=0.15.0",
    "pysqlx-engine>=0.3.2",
    "tqdm>=4.67.1",
    "transformers>=4.50.0",
]
