[project]
name = "tech-challenge-04"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepface>=0.0.93",
    "face-recognition>=1.3.0",
    "mediapipe>=0.10.14",
    "moviepy>=2.1.2",
    "mtcnn>=1.0.0",
    "opencv-python>=4.11.0.86",
    "pydantic>=2.11.4",
    "retina-face>=0.0.17",
    "scikit-learn>=1.6.1",
    "tensorflow-hub>=0.16.1",
    "tf-keras>=2.19.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["isort>=6.0.1", "ruff>=0.11.8"]

[tool.ruff]
# Enable Ruff formatter
line-length = 150
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Sort imports
[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = []
known-first-party = []
known-third-party = []
known-local-folder = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
